@@ -8,10 +8,22 @@ import domain.tutorial.ToDoTask
 import kotlinx.coroutines.Dispatchers
 import kotlinx.coroutines.IO
 import kotlinx.coroutines.launch
+import org.mongodb.kbson.ObjectId
 
 class TaskViewModel(
     private val mongoDB: MongoDB
 ): ViewModel() {
+
+    fun loadTask(id: ObjectId?): ToDoTask? {
+        try {
+            if (id != null){
+                return mongoDB.findTaskById(_id = id)
+            }
+        } catch (e: Exception){
+            println("Something went wrong $e")
+        }
+        return null
+    }
 
     fun setAction(action: TaskAction){
         when (action) {
